--- a/src/components/Pricing/PricingCard/PricingCard.scss
+++ b/src/components/Pricing/PricingCard/PricingCard.scss
@@ -4,15 +4,17 @@
 .pricingCard {
     position: relative;
     padding: 30px 0;
-    .ovarlay{
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background-color: rgba(0, 0, 0, 0.795);
-        z-index: 2;
-    }
+
+    // .overlay{
+    //     position: fixed;
+    //     top: 0;
+    //     left: 0;
+    //     width: 100%;
+    //     height: 100%;
+    //     background-color: rgba(0, 0, 0, 0.795);
+    //     z-index: 2;
+    // }
+
     .content{
         .pricing-header {
             font-family: $pri-font !important;
