added feature section in homepage

--- a/src/components/Pricing/PricingCard/PricingCard.scss
+++ b/src/components/Pricing/PricingCard/PricingCard.scss
@@ -4,16 +4,18 @@
 .pricingCard {
     position: relative;
     padding: 30px 0;
+    z-index: 1;
 
-    // .overlay{
-    //     position: fixed;
-    //     top: 0;
-    //     left: 0;
-    //     width: 100%;
-    //     height: 100%;
-    //     background-color: rgba(0, 0, 0, 0.795);
-    //     z-index: 2;
-    // }
+    &:before{
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.795);
+        z-index: -1;
+    }
 
     .content{
         .pricing-header {
