--- a/src/components/Shared/Banner/Banner.scss
+++ b/src/components/Shared/Banner/Banner.scss
@@ -3,6 +3,7 @@
 
 .banner {
     position: relative;
+    height: 530px;
     padding-top: 150px;
     padding-bottom: 100px;
     margin-bottom: 100px;
@@ -59,4 +60,12 @@
        margin-left: 50% !important;
        margin-top: 10% !important;
     }
+}
+
+.main-heading {
+    text-align: center;
+    width: 100%;
+    font-family: $pri-font;
+    color: white;
+    font-size: 90px;
 }
