added responsiveness to all page except header

--- a/src/components/Home/Feature/Feature.scss
+++ b/src/components/Home/Feature/Feature.scss
@@ -5,6 +5,7 @@
     padding: 30px 20px;
     color: white;
     height: 400px;
+    margin-bottom: 20px;
     position: relative;
     z-index: 1;
 
