--- a/src/components/Shared/Footer/Footer.scss
+++ b/src/components/Shared/Footer/Footer.scss
@@ -42,3 +42,13 @@
         }
     }
 }
+
+@media (max-width: 768px){
+    .footer {
+        text-align: center;
+
+        .logo{
+            margin-bottom: 30px;
+        }
+    }
+}
