--- a/src/components/Home/Speciality/Speciality.scss
+++ b/src/components/Home/Speciality/Speciality.scss
@@ -4,6 +4,7 @@
 .speciality {
     text-align: center;
     padding: 40px 30px;
+    margin-bottom: 20px;
     border: 1px solid white;
     border-radius: 10px;
     box-shadow: 2px 2px 10px rgb(231, 231, 231);
