--- a/src/components/Shared/Header/Header.scss
+++ b/src/components/Shared/Header/Header.scss
@@ -30,3 +30,19 @@
         color: white !important;
     }
 }
+
+@media (max-width: 768px){
+    .logo {
+        font-size: 20px !important;
+        display: block !important;
+    }
+    .header-link {
+        margin-right: auto !important;
+
+        .nav-link{
+            margin: 0 !important;
+            font-size: 12px !important;
+            text-align: center;
+        }
+    }
+}
